- Reduce data quantity when instrumenting - Merge InvocationTracker and EntityTracker into one class which is used to perform associations during subject execution - Cleanup tests - Implement GlobalProvenanceTracker - Connect cache to ProvenanceTracker API